--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=5000
 CLIENT_URL=http://localhost:3000
+DATABAE='mongodb+srv://jahnvi:jahnvi001@cluster0-0uzok.mongodb.net/test?retryWrites=true&w=majority'
