--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=5000
 CLIENT_URL=http://localhost:3000
 DATABASE='mongodb+srv://jahnvi:jahnvi001@cluster0-0uzok.mongodb.net/test?retryWrites=true&w=majority'
+JWT_SECRET='secretkey'
